--- a/css/style.css
+++ b/css/style.css
@@ -113,6 +113,12 @@ hr {
     padding-top: 40px;
 }
 
+#earthlike_planets_section {
+    padding-top: 50px;
+    padding-bottom: 50px;
+    height: 800px;
+}
+
 
 #earthlikes_pic {
     width: 600px;
@@ -123,6 +129,11 @@ hr {
     padding-top: 50px;
 }
 
+#exploration_section {
+    padding-top: 100px;
+    padding-bottom: 100px;
+    height: 800px;
+}
 
 #explore_content {
     padding-top: 40px;
@@ -168,11 +179,23 @@ hr {
     }
 }
 
+.placeholder {
+    text-align: center;
+    padding-top: 400px;
+    color: white;
+}
+
+#resize_mock {
+    padding-top: 50px;
+    padding-bottom: 50px;
+    width: 100%;
+}
+
 .vis1 {
     text-align: center;
     font-family: "Avenir Next Condensed";
     font-size: 3em;
-    background-color: black;
+    /*background-color: black;*/
     padding-top: 50px;
 }
 
