--- a/css/style.css
+++ b/css/style.css
@@ -95,6 +95,9 @@ hr {
     padding-right: 20%;
 }
 
+/* First 3D earth */
+
+
 #earth_section {
     padding-top: 50px;
     padding-bottom: 50px;
@@ -252,7 +255,7 @@ hr {
 .closeup {
   color: white;
   font-family: "Avenir Next Condensed";
-  margin-top: -150px;
+  margin-top: 0;
 }
 
 #closeup-vis {
